mysql 커넥터 커밋 엑세스 로그 분석 소스 커밋 map 테스트 커밋 기타 커밋..

--- a/test.encoding/pom.xml
+++ b/test.encoding/pom.xml
@@ -99,6 +99,20 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
+		
+		<!-- jdbc mariadb-->
+		<!-- <dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>1.1.8</version>
+		</dependency> -->
+		
+		<!-- mysql connector -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.35</version>
+		</dependency>
 				
 	</dependencies>
 </project>
