--- a/test.encoding/.classpath
+++ b/test.encoding/.classpath
@@ -29,5 +29,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="D:/개발도구/라이브러리/juniversalchardet-1.0.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
