--- a/test.encoding/pom.xml
+++ b/test.encoding/pom.xml
@@ -108,11 +108,18 @@
 		</dependency> -->
 		
 		<!-- mysql connector -->
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.35</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>mysql</groupId> -->
+<!-- 			<artifactId>mysql-connector-java</artifactId> -->
+<!-- 			<version>6.0.6</version> -->
+<!-- 		</dependency> -->
+    
+    <dependency>
+      <groupId>org.mariadb.jdbc</groupId>
+      <artifactId>mariadb-java-client</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+    
 		<!-- poi -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
@@ -165,5 +172,19 @@
 			<artifactId>jackson-core</artifactId>
 			<version>2.6.1</version>
 		</dependency>
+    
+    <dependency>
+        <groupId>javax.validation</groupId>
+        <artifactId>validation-api</artifactId>
+        <version>1.1.0.Final</version>
+    </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.6</version>
+    </dependency>
+        
 	</dependencies>
 </project>
